# amazon-bedrock-agentcore-samples-customer

./: README.md
02-use-cases/AWS-documentation-assistant/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
02-use-cases/AWS-documentation-assistant/scripts/: clean.py  deploy.py  invoke.py
02-use-cases/SRE-agent/gateway/: README.md  main.py
02-use-cases/asynchronous-shopping-assistant/: async_shopping_with_strands.py
02-use-cases/customer-support-assistant/: README.md
02-use-cases/customer-support-assistant/scripts/: agentcore_agent_runtime.py
02-use-cases/local-prototype-to-agentcore/: README.md
02-use-cases/local-prototype-to-agentcore/agentcore_app/: README.md
02-use-cases/local-prototype-to-agentcore/local_prototype/: README.md
02-use-cases/text-to-python-ide/: README.md
02-use-cases/text-to-python-ide/docs/: ARCHITECTURE.md  OVERVIEW.md  README.md
02-use-cases/video-games-sales-assistant/: README.md
02-use-cases/video-games-sales-assistant/agentcore-strands-data-analyst-assistant/: README.md
02-use-cases/video-games-sales-assistant/amplify-video-games-sales-assistant-agentcore-strands/: README.md
03-integrations/agentic-frameworks/adk/: README.md  adk_agent_google_search.py
03-integrations/agentic-frameworks/autogen/: README.md
03-integrations/agentic-frameworks/langgraph/: README.md
03-integrations/agentic-frameworks/llamaindex/: README.md
03-integrations/agentic-frameworks/openai-agents/: .dockerignore  (+3 more)
03-integrations/bedrock-agent/: Bedrock_Agent_Integration_with_Bedrock_Agent_Core_Gateway.ipynb  README.md
(+17 files in other folders)
